# RockVAD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bin_examples.sh  build-aarch64-linux-mr527.sh
c-api-examples/: CMakeLists.txt
cmake/: onnxruntime-linux-aarch64-1.15.1.tgz  onnxruntime.cmake
cpp-api-examples/: CMakeLists.txt  detect-file-cpp-api.cc
models/: README.md  export_onnx.py  optimized_model.onnx  silero_vad.onnxsim.onnx  silero_vad.onnxsim.opt.onnx  silero_vad.onnxsim.opt.ort  silero_vad.onnxsim.opt.required_operators_and_types.config  silero_vad.onnxsim.opt.required_operators_and_types.with_runtime_opt.config  silero_vad.onnxsim.opt.with_runtime_opt.ort  silero_vad.opt.onnx  silero_vad.opt.ort  silero_vad.opt.required_operators.config  silero_vad.opt.required_operators.with_runtime_opt.config  silero_vad.opt.required_operators_and_types.config  silero_vad.opt.required_operators_and_types.with_runtime_opt.config  silero_vad.opt.with_runtime_opt.ort
rockvad/: CMakeLists.txt
rockvad/c-api/: CMakeLists.txt  rockvad.cc  rockvad.h
rockvad/cpp-api/: CMakeLists.txt  rockvad.cc  rockvad.h  wav.h
rockvad/csrc/: CMakeLists.txt  log.cc  log.h  parse-options.cc  parse-options.h  rockvad-onnx.cc
toolchains/: aarch64-linux-mr527.toolchain.cmake
